--- a/trinkets/package.json
+++ b/trinkets/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "trinkets-street",
-  "type": "module",
+  "name": "trinkets-app",
+  "version": "1.0.0",
+  "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "express": "^4.19.2"
   }
 }
